fix(sessions): save date as ISO to order sessions properly